Select implementation from the correct package and inherit I/O